feat: vincular un user a una empresa
